syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "SakhaTyla.Web.Protos.BookAuthors";

message BookAuthor {
    int32 id = 1;
    google.protobuf.Timestamp creationDate = 2;
    google.protobuf.Timestamp modificationDate = 3;
    int32 creationUserId = 4;
    int32 modificationUserId = 5;
    string lastName = 6;
    string firstName = 7;
    string middleName = 8;
    string nickName = 9;
}

message BookAuthorPageModel {
    repeated BookAuthor pageItems = 1;
    int32 totalItems = 2;
    int32 currentPageIndex = 3;
}